--- a/public/css/style.css
+++ b/public/css/style.css
@@ -50,6 +50,7 @@
     padding-top: 80px;
     animation-name: anm-title-banner;
     animation-duration: 10s;
+    text-shadow: 5px 5px 0px black;
 }
 
 
@@ -95,6 +96,7 @@
     z-index: 1;
     font-size: 40px;
     padding-top: 80px;
+    text-shadow: 5px 5px 0px black;
     animation-name: anm-subtitle-banner;
     animation-duration: 12s;
 }
